Added Statdescriptor reference to stats.